# processor-simulator

./: Cargo.toml  README.md  experiments.md  install_dependencies.sh  mvb.sh  slides.pptx
.github/workflows/: rust.yml
programs/: .gitignore  Makefile  README.md  basic.c  bitcount.c  factorial.c  fibonacci.c  libc.c  libc.h  sim.c  sim.h  test.c  test1.c
programs/basic/: basic.c  basic.elf  build.sh  output.txt
simulator/: Cargo.toml
simulator/src/: main.rs
src/: decoded.rs  instructions.rs  main.rs  memory.rs  pipeline.rs  registers.rs  reservation.rs  simulator.rs  simulators.rs  station.rs
src/cpu_state/: decode.rs  execute.rs  fetch.rs  mod.rs  station.rs
src/instructions/: add.rs  adr.rs  b.rs  bx.rs  cmp.rs  extends.rs  ldm.rs  ldr.rs  logical.rs  lsl.rs  mod.rs  mov.rs  mul.rs  nop.rs  pop.rs  push.rs  shift.rs  stm.rs  str.rs  sub.rs  svc.rs  tst.rs  util.rs
src/simulators/: mod.rs  non_pipelined.rs  out_of_order.rs  pipelined.rs
