[package]
name = "simulator"
version = "0.1.0"
authors = ["Jacob Halsey <jacob@jhalsey.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elf = {git = "https://github.com/cole14/rust-elf/"}
capstone = "0.7.0"
clap = "2.33.3"
num-derive = "0.3"
num =  { version = "0.2", default-features = false }
num-traits = { version = "0.2", default-features = false }
rayon = "1.5"
